	* CopyJob.cc, CopyJob.h, FileCopy.cc, FileCopy.h, Fish.cc,
	  FtpListInfo.cc, Http.cc, HttpDir.cc, NetAccess.cc,
	  NetAccess.h, Resolver.cc, SMTask.cc, SMTask.h, SleepJob.cc,
	  Speedometer.cc, Speedometer.h, StatusLine.cc, StatusLine.h,
	  complete.cc, ftpclass.cc, misc.cc, misc.h: use new time classes.
	* commands.cc: (builtin_lcd) don't assume cwd!=0.

2001-11-05  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.h: fix coredump on `mget -E'.
	* complete.cc, parsecmd.cc: accept single quote as well as double
	  quote, no difference between the two yet.

2001-10-30  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc: no need to convert cached data - it is done by other
	  copy peer; don't translate really debugging messages.
	* misc.cc: no need for crlf_to_lf.
	* complete.cc: don't show completion status right after the tab since
	  the listing can come from cache fast.

2001-10-29  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.cc: use dynamic allocation in set_tz; use unsetenv to unset TZ;
	  implement unsetenv is not available using environ array.
	* ColumnOutput.cc: make it compile with irix compiler.

2001-10-27  Alexander V. Lukyanov <lav@yars.free.net>

	* FtpDirList.cc: clean up; style.
	* FileCopy.cc: style; restore eof behaviour.
	* misc.cc: rewrite mem_crlf and crlf_to_lf to make them more clear.

2001-10-27  Glenn Maynard <g_ld@zewt.org>

	* FileCopy.cc, FtpDirList.cc, FtpDirList.h, misc.cc, misc.h:
	  Speed up ascii mode transfer.
	* command.cc: cosmetics.

2001-10-25  Alexander V. Lukyanov <lav@yars.free.net>

	* misc.cc, misc.h: (mktime_from_tz) new function.
	* FtpListInfo.cc, FtpListInfo.h: use it.
	* resource.cc: (ftp:timezone) new setting.

2001-10-25  Glenn Maynard <g_ld@zewt.org>

	* FileSetOutput.cc, FileSetOutput.h, commands.cc: -1 option for cls;
	  readded -q to help cls; added missing \n.
	* misc.cc, misc.h: -rwxr-xr-t implies S_IXOTH; -rwxr-xr-T does not;