@@ -240,16 +240,11 @@ char *FtpDirList::EPLF(const char *b, int linelen)
       strcpy(size_str,"-");
    else
       sprintf(size_str,"%lld",(long long)size);
-   char date_str[21];
-   if(date == NO_DATE)
-      strcpy(date_str,"-");
-   else {
-      struct tm *t=localtime(&date);
-      sprintf(date_str, "%04d-%02d-%02d %02d:%02d",
-	    t->tm_year+1900,t->tm_mon+1,t->tm_mday,
-	    t->tm_hour,t->tm_min);
-   }
-   sprintf(line_add, "%c%s  %10s  %16s  %.*s",
+   const char *date_str="-";
+   if(date!=NO_DATE)
+      date_str=TimeDate(date).IsoDateTime();
+
+   sprintf(line_add, "%c%s  %10s  %16s  %.*s\n",
 	 dir ? 'd':'-', format_perms(perms), size_str,
 	 date_str, name_len, name);
 
